# mcmlnet

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  data_gen_eval.sh  eval.sh  eval_with_data.sh  experiment_config.yaml  pyproject.toml  quickstart_surrogate_inference.ipynb
mcmlnet/: constants.py
mcmlnet/data_gen/: camera_adaptation.py  empirical_validation_1000M_photons_script.py  generate_final_data_spec.py  physical_generalization_data_script.py  physiological_data_script.py  related_work_resimulation.ipynb  surrogate_model_inference.ipynb
mcmlnet/experiments/: discover_models.py  evaluate_final_model.py  evaluate_other_scaling_models.py  evaluate_related_scaling_models.py  evaluate_scaling_models.py  explainability.py  get_dataset_statistics.py  plot_scaling_results.py  plot_scaling_results_appendix.py  plotting.py  qualitative_oxygenation_knn_eval.ipynb  spectral_pca_analysis.py  spectral_recall_analysis.py  timings.ipynb  utils.py
mcmlnet/experiments/data_loaders/: aggregation.py  config.py  porcine_clamping_data.py  real_data.py  simulation.py  utils.py
mcmlnet/susi/: adapt_to_camera.py  calculate_spectra.py  sim.py  usuag.py
mcmlnet/training/: flop_and_gmac_counting.py  plotting.py
mcmlnet/training/configs/: default.yaml
mcmlnet/training/configs/data_and_processing/: forward_surrogate_model.yaml
mcmlnet/training/configs/mode/: train.yaml  tune.yaml  tune_kan.yaml
mcmlnet/training/configs/model/: forward_surrogate_kan.yaml  forward_surrogate_model.yaml
mcmlnet/training/data_loading/: data_augmentation.py  data_augmentation_classes.py  data_module.py  datasets.py  preprocessing.py  sota_data_classes.py
mcmlnet/training/models/: base_model.py  kan.py  kan_model.py  network_constructor.py
mcmlnet/training/optimization/: analytical_baselines.py  fit_analytical_baselines.ipynb  optimizer.py  optuna_hp_opt.py  related_work_neural_network_training.ipynb  sophia_optimizer.py
mcmlnet/transforms/: physiological.py  related_work_transformations.py
mcmlnet/utils/: caching.py  convenience.py  haemoglobin_extinctions.py  knn.py  knn_cuml.py  load_configs.py  loading.py  logging.py  mc_runner.py  metrics.py  network_init.py  process_spectra.py  rescaling.py  tensor.py
tests/data_gen/: test_camera_adaptation.py
tests/experiments/: test_data_loaders.py
tests/training/data_loading/: test_data_augmentation_classes.py  test_data_module.py  test_datasets.py  test_preprocessing.py  test_sota_data_classes.py
tests/training/models/: test_models_network_constructor.py
tests/training/optimization/: test_analytical_baselines.py  test_optimizer.py
tests/transforms/: test_physiological.py  test_related_work_transformations.py
tests/utils/: test_caching.py  test_convenience.py  test_haemoglobin_extinctions.py  test_knn_cuml.py  test_load_configs.py  test_loading.py  test_mc_runner.py  test_metrics.py  test_network_init.py  test_process_spectra.py  test_rescaling.py  test_tensor.py
